# house-hunter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
house_hunter/: agent.py  cli.py  config.py  db.py  distance.py  llm.py  main.py  prompts.py  schools.py  scraper.py
house_hunter/web/: __init__.py  filters.py  routes_agent.py  routes_browse.py
house_hunter/web/static/: style.css
house_hunter/web/templates/: base.html  chat.html  detail.html  districts.html  favorites.html  listings.html  locations.html  preferences.html  snapshots.html
