[project]
name = "house-hunter"
version = "0.1.0"
description = "House hunting agent that scrapes and analyzes real estate listings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "geopy>=2.4.1",
    "homeharvest>=0.8.18",
    "litellm>=1.81.15",
    "pandas>=2.3.3",
    "requests>=2.31.0",
]
